[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/icons/folder_button_flat_ready.svg" type="Texture" id=1]
[ext_resource path="res://GUI.gd" type="Script" id=2]
[ext_resource path="res://addons/CADLikeOrbit_Camera/CADLikeOrbit_Camera.gd" type="Script" id=3]
[ext_resource path="res://assets/icons/home_button_flat_ready.svg" type="Texture" id=4]
[ext_resource path="res://assets/icons/close_button_flat_ready.svg" type="Texture" id=5]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GUI" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="GUI"]
margin_right = 1024.0
margin_bottom = 600.0

[node name="Toolbar" type="HBoxContainer" parent="GUI/VBoxContainer"]
margin_right = 1024.0
margin_bottom = 48.0
rect_min_size = Vector2( 0, 30 )
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OpenButton" type="ToolButton" parent="GUI/VBoxContainer/Toolbar"]
margin_right = 51.0
margin_bottom = 48.0
size_flags_vertical = 3
icon = ExtResource( 1 )

[node name="CloseButton" type="ToolButton" parent="GUI/VBoxContainer/Toolbar"]
margin_left = 55.0
margin_right = 107.0
margin_bottom = 48.0
icon = ExtResource( 5 )

[node name="HomeViewButton" type="ToolButton" parent="GUI/VBoxContainer/Toolbar"]
margin_left = 111.0
margin_right = 163.0
margin_bottom = 48.0
icon = ExtResource( 4 )

[node name="WorkArea" type="HSplitContainer" parent="GUI/VBoxContainer"]
margin_top = 52.0
margin_right = 1024.0
margin_bottom = 571.0
size_flags_vertical = 3

[node name="TreeViewTabs" type="TabContainer" parent="GUI/VBoxContainer/WorkArea"]
margin_right = 100.0
margin_bottom = 519.0
rect_min_size = Vector2( 100, 0 )
tab_align = 0

[node name="Tree" type="Tree" parent="GUI/VBoxContainer/WorkArea/TreeViewTabs"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="DocumentTabs" type="TabContainer" parent="GUI/VBoxContainer/WorkArea"]
margin_left = 112.0
margin_right = 1024.0
margin_bottom = 519.0
size_flags_horizontal = 3
size_flags_vertical = 3
tab_align = 0

[node name="3DViewContainer" type="ViewportContainer" parent="GUI/VBoxContainer/WorkArea/DocumentTabs"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0
size_flags_horizontal = 3
size_flags_vertical = 3
stretch = true

[node name="3DViewport" type="Viewport" parent="GUI/VBoxContainer/WorkArea/DocumentTabs/3DViewContainer"]
size = Vector2( 904, 483 )
handle_input_locally = false
render_target_update_mode = 3

[node name="CADLikeOrbit_Camera" type="Camera" parent="GUI/VBoxContainer/WorkArea/DocumentTabs/3DViewContainer/3DViewport"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 3 )
script = ExtResource( 3 )
IfNoObjPickedRotateAroundOrigin = true
RotateUsingZoomPlusPan = false

[node name="StatusBar" type="MarginContainer" parent="GUI/VBoxContainer"]
margin_top = 575.0
margin_right = 1024.0
margin_bottom = 600.0
rect_min_size = Vector2( 0, 25 )

[node name="Panel" type="Panel" parent="GUI/VBoxContainer/StatusBar"]
margin_right = 1024.0
margin_bottom = 25.0
size_flags_horizontal = 3

[node name="OpenDialog" type="FileDialog" parent="."]
margin_right = 760.0
margin_bottom = 381.0
window_title = "Open a File"
mode = 0
access = 2
filters = PoolStringArray( "*.py" )
current_dir = "/home/jwright/Downloads/repos/Semblage"
current_path = "/home/jwright/Downloads/repos/Semblage/"
[connection signal="button_down" from="GUI/VBoxContainer/Toolbar/OpenButton" to="." method="_on_OpenButton_button_down"]
[connection signal="button_down" from="GUI/VBoxContainer/Toolbar/CloseButton" to="." method="_on_CloseButton_button_down"]
[connection signal="button_down" from="GUI/VBoxContainer/Toolbar/HomeViewButton" to="." method="_on_HomeViewButton_button_down"]
[connection signal="file_selected" from="OpenDialog" to="." method="_on_OpenDialog_file_selected"]
